--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vee-validate": "^2.1.0-beta.8",
         "vue-notification": "^1.3.13",
         "vue-resource": "^1.5.1",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
